[package]
name = "canteen-impl"
version = "0.5.0"
authors = ["jeffdn@gmail.com"]

[dependencies]
postgres = { version = "0.15", features = ["with-chrono"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
#canteen = { version = "0.5", path = "../rust-canteen" }
canteen = "0.5"
